--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,24 @@
 * {
   font-family: Roboto;
 }
+body {
+  margin: 0;
+  background-color: rgb(60, 60, 60);
+}
 
-.App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.App, .Timetable {
+  color: white;
+  /* display: flex;
+  flex-direction: column; */
+
 }
 
 table, td{
   border: 2px solid black;
   text-align: center;
+}
+
+.link {
+  text-decoration: none;
+  color: white;
 }
