--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,12 @@ img {
   width: fit-content;
 }
 
+important {
+  color: black;
+  background-color: rgb(47, 255, 0);
+  padding: 4px;
+}
+
 hr {
   border-style: solid;
   border-width: 4px;
