--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,8 @@ hr:hover {
   border-right: 1px solid black;
 }
 
+.dialogTitle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
