--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,15 @@ body {
   background-color: rgb(60, 60, 60);
 }
 
-.App, .Timetable, .ClassMoney, .CreateHW {
+.App, .Timetable, .ClassMoney, .CreateHW, .PrivacyP {
   color: white;
   /* display: flex;
   flex-direction: column; */
 
+}
+
+.PrivacyP > p, h1, h2 {
+  padding: 10px;
 }
 
 table, td{
