Added ant design framework to app, will change mui for it soon, devtesting route

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
 }
 
 .App, .Timetable, .ClassMoney, .CreateHW, .PrivacyP {
-  color: white;
+  /* color: white; */
   /* display: flex;
   flex-direction: column; */
 
