--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,6 @@
 }
 body {
   margin: 0;
-  background-color: rgb(60, 60, 60);
-}
-
-.App, .Timetable, .ClassMoney, .CreateHW, .PrivacyP {
-  color: white;
-  /* display: flex;
-  flex-direction: column; */
-
 }
 
 table, td{
@@ -22,7 +14,7 @@ table, td{
 
 .link {
   text-decoration: none;
-  color: white;
+  color: white
 }
 
 .ClassMoney {
@@ -40,7 +32,6 @@ table, td{
 }
 
 .kidContainer {
-  /* border: 2px dashed white; */
   min-width: 340px;
 }
 
@@ -48,18 +39,10 @@ code {
   font-family: monospace;
   border: 1px black solid;
   border-radius: 5px;
-  background-color: rgb(249, 249, 249);
-  color: black;
 }
 
 img {
   width: 280px;
-}
-
-important {
-  color: white;
-  background-color: rgb(47, 255, 0);
-  padding: 4px;
 }
 
 .container {
